--- a/axeKnight.html
+++ b/axeKnight.html
@@ -74,7 +74,7 @@
  };
  
  function drawPlayer() {
-  c.drawImage(player_image, 0, 0, 105, player.height/2, player.x, player.y, 105, player.height/2);
+  c.drawImage(player_image, 0, 0, 105, 276, player.x, player.y, 105, player.height/2);
  }
  
  //ATTACK
