--- a/axeKnight.html
+++ b/axeKnight.html
@@ -5,7 +5,7 @@
  <body>
  <a href="./index.html">Homepage</a>
  <br>
-<canvas id="canvas" style="background:#000"></canvas> 
+<canvas id="canvas" style="background:#fffff"></canvas> 
   
 <script>
  
