--- a/axeKnight.html
+++ b/axeKnight.html
@@ -269,7 +269,7 @@ enemy.x += enemy.x_velocity;
     
    function drawHealth() {
     c.font = "18px Arial"
-    c.fillStyle = "ffffff"
+    c.fillStyle = "#00000"
     c.fillText("Health: " + player.health, 25, 25)
    }
    
