--- a/axeKnight.html
+++ b/axeKnight.html
@@ -48,6 +48,69 @@
   }}
  
   //PLAYER
+ //direction/movement functions
+ function leftOne() {
+player.sx = 0
+player.sy = 0
+player.sHeight = 276 
+player.sWidth = 105 
+ }
+ function leftTwo() {
+  player.sx = 110
+player.sy = 0
+player.sHeight = 276 
+player.sWidth = 255  
+ }
+ function leftThree() {
+  player.sx = 260
+player.sy = 0
+player.sHeight = 276 
+player.sWidth = 422     
+ } 
+  function leftFour() {
+player.sx = 427
+player.sy = 0
+player.sHeight = 276 
+player.sWidth = 570  
+ }
+ function leftFive() {
+player.sx = 575
+player.sy = 0
+player.sHeight = 276 
+player.sWidth = 709  
+ }
+ function rightOne() {
+ player.sx = 0
+player.sy = 252
+player.sHeight = 558 
+player.sWidth = 140 
+ }
+  function rightTwo() {
+   player.sx = 145
+player.sy = 252
+player.sHeight = 558 
+player.sWidth = 290 
+ }
+ function rightThree() {
+  player.sx = 295
+player.sy = 252
+player.sHeight = 558 
+player.sWidth = 440 
+ }
+ function rightFour() {
+  player.sx = 0
+player.sy = 252
+player.sHeight = 558 
+player.sWidth = 585  
+ } 
+ function rightFive() {
+  player.sx = 590
+player.sy = 252
+player.sHeight = 558 
+player.sWidth = 709`  
+ } 
+ 
+ 
  var slash_image = new Image();
  slash_image.src = 'slash.png'
  var player_height = 595;
@@ -205,8 +268,7 @@ controller = {
  player.x_velocity = 0;
   player.face = 'left';
  } else {
-   player.x_velocity -= 1.2;
-   player.face = 'left';
+   player.x_velocity -= 1.2; 
  }}
  
  if (controller.right) {
