--- a/axeKnight.html
+++ b/axeKnight.html
@@ -144,7 +144,7 @@ player.sWidth = 709
  
  
  function drawPlayer() {
-  c.drawImage(player_image, player.sx, player.sy, player.sWidth, player.sHeight, player.x, player.y, player.sWidth, player.sHeight);
+  c.drawImage(player_image, player.sx, player.sy, player.sWidth, player.sHeight, player.x, player.y, player.sWidth - player.sx, player.sHeight + player.sx);
  }
  
  //ATTACK
