--- a/axeKnight.html
+++ b/axeKnight.html
@@ -54,60 +54,80 @@ player.sx = 0
 player.sy = 0
 player.sHeight = 276 
 player.sWidth = 105 
+player.width = 105
+player.height = 276 
  }
  function rightTwo() {
   player.sx = 110
 player.sy = 0
 player.sHeight = 276 
 player.sWidth = 255  
+  player.width = 145
+player.height =  276
  }
  function rightThree() {
   player.sx = 260
 player.sy = 0
 player.sHeight = 276 
-player.sWidth = 422     
+player.sWidth = 422 
+  player.width = 162
+player.height = 276 
  } 
   function rightFour() {
 player.sx = 427
 player.sy = 0
 player.sHeight = 276 
 player.sWidth = 570  
+   player.width = 147
+player.height = 276 
  }
  function rightFive() {
 player.sx = 575
 player.sy = 0
 player.sHeight = 276 
 player.sWidth = 709  
+  player.width = 134
+player.height = 276 
  }
  function leftFive() {
  player.sx = 0
 player.sy = 281
 player.sHeight = 558 
 player.sWidth = 140 
+  player.width = 140
+player.height = 276
  }
   function leftFour() {
    player.sx = 145
 player.sy = 281
 player.sHeight = 558 
 player.sWidth = 290 
+   player.width = 145
+player.height = 276 
  }
  function leftThree() {
   player.sx = 295
 player.sy = 281
 player.sHeight = 558 
 player.sWidth = 440 
+  player.width = 145
+player.height = 276 
  }
  function leftTwo() {
-  player.sx = 0
+  player.sx = 445
 player.sy = 281
 player.sHeight = 558 
-player.sWidth = 585  
+player.sWidth = 585 
+  player.width = 140
+player.height = 276 
  } 
  function leftOne() {
   player.sx = 590
 player.sy = 281
 player.sHeight = 558 
-player.sWidth = 709  
+player.sWidth = 709 
+  player.width = 119
+player.height = 276 
  } 
  
  
@@ -133,18 +153,16 @@ player.sWidth = 709
   jumping: false,
   x_velocity: 0,
   y_velocity: 0, 
-  height: player_height,
-  width: player_width,
+  height: 176,
+  width: 105,
   x: innerWidth/2 - player_width/2,
   x_end: this.x + 100,
   y: innerHeight - (player_height + 100),
  };
  
- var pHeight = player.sHeight + player.sy
-var pWidth = player.sWidth - player.sx 
  
  function drawPlayer() {
-  c.drawImage(player_image, player.sx, player.sy, player.sWidth, player.sHeight, player.x, player.y, pWidth, pHeight);
+  c.drawImage(player_image, player.sx, player.sy, player.sWidth, player.sHeight, player.x, player.y, player.width, player.height);
  }
  
  //ATTACK
