--- a/axeKnight.html
+++ b/axeKnight.html
@@ -299,6 +299,12 @@ controller = {
   player.x_velocity += 1.2;
 player.face = 'right';
    rightOne()
+  while (controller.right) {
+   rightTwo()
+   rightThree()
+   rightFour()
+   rightFive()
+  }
  }} 
  
 player.y_velocity += 5;
