--- a/axeKnight.html
+++ b/axeKnight.html
@@ -49,7 +49,7 @@
  
   //PLAYER
  //direction/movement functions
- var movementArray = [rightOne(), rightTwo(), rightThree(), rightFour(), rightFive(), leftOne(), leftTwo(), leftThree(), leftFour(), leftFive()]
+ //var movementArray = [rightOne(), rightTwo(), rightThree(), rightFour(), rightFive(), leftOne(), leftTwo(), leftThree(), leftFour(), leftFive()]
  
  function rightOne() {
 player.sx = 0
@@ -165,7 +165,6 @@ player.sHeight = 276
  
  function drawPlayer() {
   c.drawImage(player_image, player.sx, player.sy, player.sWidth, player.sHeight, player.x, player.y, player.sWidth, player.sHeight);
- movementArray++
  }
  
  //ATTACK
@@ -441,11 +440,9 @@ enemy.x += enemy.x_velocity;
 
   
  c.clearRect(0,0, canvas.width, canvas.height);
- 
-   setInterval(drawPlayer, 100)
    
    
-
+ drawPlayer(); 
  enemy.draw();
  drawHealth();  
   
