--- a/axeKnight.html
+++ b/axeKnight.html
@@ -242,7 +242,7 @@ controller = {
  } else {
    player.x_velocity -= 1.2; 
   player.face = 'left'
-  leftOne()
+  movementArray[6]
   
  }}
  
@@ -253,7 +253,7 @@ controller = {
   } else {
   player.x_velocity += 1.2;
 player.face = 'right';
-   rightOne()
+   movementArray[0]
  }} 
  
 player.y_velocity += 5;
