--- a/game2.html
+++ b/game2.html
@@ -16,7 +16,7 @@
  var innerHeight = 775; 
  canvas.width = innerWidth;
  canvas.height = innerHeight;
- c.drawImage(canvasImage);     
+ c.drawImage(canvasImage, 0, 0, 1420, 775);     
       
       </script>
     </body>
