--- a/axeKnight.html
+++ b/axeKnight.html
@@ -245,7 +245,10 @@ controller = {
    player.x_velocity -= 1.2; 
   player.face = 'left'
   leftOne();
-  
+  setTimeout(leftTwo, 100)
+  setTimeout(leftThree, 100)
+  setTimeout(leftFour, 100)
+  setTimeout(leftFive, 100) 
  }}
  
  if (controller.right) {
