--- a/axeKnight.html
+++ b/axeKnight.html
@@ -245,10 +245,12 @@ controller = {
    player.x_velocity -= 1.2; 
   player.face = 'left'
   leftOne();
-  setTimeout(leftTwo, 100)
-  setTimeout(leftThree, 100)
-  setTimeout(leftFour, 100)
-  setTimeout(leftFive, 100) 
+  while(contoller.left === true){
+   setTimeout(leftTwo(), 100)
+   setTimeout(leftThree(), 100)
+   setTimeout(leftFour(), 100)
+   setTimeout(leftFive(), 100)
+  }
  }}
  
  if (controller.right) {
