--- a/axeKnight.html
+++ b/axeKnight.html
@@ -245,7 +245,7 @@ controller = {
    player.x_velocity -= 1.2; 
   player.face = 'left'
   leftOne();
-  while(contoller.left === true){
+  while(controller.left === true){
    setTimeout(leftTwo(), 100)
    setTimeout(leftThree(), 100)
    setTimeout(leftFour(), 100)
