--- a/axeKnight.html
+++ b/axeKnight.html
@@ -59,7 +59,7 @@
  player_image.src = 'knight (1).png';
  
   var player = { 
-   frameNumber: 1,
+   frame: 1,
    imunityLength: 100,
    imunity: false,
    gravity: true,
