--- a/axeKnight.html
+++ b/axeKnight.html
@@ -59,7 +59,6 @@
  player_image.src = 'knight (1).png';
  
   var player = { 
-   frame: 1,
    imunityLength: 100,
    imunity: false,
    gravity: true,
@@ -86,61 +85,61 @@
   c.drawImage(player_image, player.sx, player.sy, player.sWidth, player.sHeight, player.x, player.y, player.sWidth, player.sHeight); 
  }
  
- if (player.frame === 1) {
+function rightOne() {
 player.sx = 0
 player.sy = 0
 player.sWidth = 105
 player.sHeight = 276 
  }
-if (player.frame === 2) {
+function rightTwo() {
   player.sx = 110
 player.sy = 0
   player.sWidth = 145
 player.sHeight =  276
  }
- if (player.frame === 3) {
+function rightThree() {
   player.sx = 260
 player.sy = 0 
   player.sWidth = 162
 player.sHeight = 276 
  } 
-if (player.frame === 4) {
+function rightFour() {
 player.sx = 427
 player.sy = 0
    player.sWidth = 147
 player.sHeight = 276 
  }
- if (player.frame === 5) {
+function rightFive() {
 player.sx = 575
 player.sy = 0
   player.sWidth = 134
 player.sHeight = 276 
  }
-if (player.frame === 6) {
+function leftFive() {
  player.sx = 0
 player.sy = 281
   player.sWidth = 140
 player.sHeight = 276
  }
-if (player.frame === 7) {
+function leftFour() {
    player.sx = 145
 player.sy = 281
    player.sWidth = 145
 player.sHeight = 276 
  }
-if (player.frame === 8) {
+function leftThree() {
   player.sx = 295
 player.sy = 281
   player.sWidth = 145
 player.sHeight = 276 
  }
-if (player.frame === 9) {
+function leftTwo() {
   player.sx = 445
 player.sy = 281
   player.sWidth = 140
 player.sHeight = 276 
  } 
-if (player.frame === 10) {
+function leftOne() {
   player.sx = 590
 player.sy = 281
 player.sWidth = 119
@@ -230,7 +229,7 @@ controller = {
  } else {
    player.x_velocity -= 1.2; 
   player.face = 'left'
-player.frame = 6; 
+leftOne();
   }
  }
  
@@ -241,7 +240,7 @@ player.frame = 6;
   } else {
   player.x_velocity += 1.2;
 player.face = 'right';
-   player.frame = 1;
+ rightOne();
  }} 
  
 player.y_velocity += 5;
