--- a/axeKnight.html
+++ b/axeKnight.html
@@ -20,6 +20,8 @@
  canvas.height = innerHeight;
  
  
+
+ 
  //AVATARS SET UP
  
  
@@ -86,7 +88,7 @@
   c.drawImage(player_image, player.sx, player.sy, player.sWidth, player.sHeight, player.x, player.y, player.sWidth, player.sHeight); 
  }
  
-
+ 
 if (player.frame === 1){  
 function rightOne() {
 player.sx = 0
@@ -194,7 +196,7 @@ controller = {
 
  animation = function() {
   
-
+player.frame = 3
    //DIFFERENT SCREENS
   
   
