--- a/axeKnight.html
+++ b/axeKnight.html
@@ -196,9 +196,6 @@ controller = {
 
  animation = function() {
   
-player.frame = 3
-  
-  console.log(player.frame)
    //DIFFERENT SCREENS
   
   
@@ -254,16 +251,12 @@ player.frame = 3
   } else {
   player.x_velocity += 1.2;
 player.face = 'right';
-   player.frame = 1
-  function rightMovement() {
-   setTimeout(function (){player.frame = 2}, 300)
-   setTimeout(function () {player.frame = 3}, 300)
-   setTimeout(function () {player.frame = 4}, 300)
-   setTimeout(function () {player.frame = 5}, 300)
-   if (controller.right) {
-    rightMovement();
+   player.frame = 5
+   console.log(player.frame)
+   console.log(player.xs)
+     
    }
- }}} 
+ } 
  
 player.y_velocity += 5;
 player.x += player.x_velocity;
