--- a/axeKnight.html
+++ b/axeKnight.html
@@ -90,70 +90,71 @@
  
  
 if (player.frame === 1){  
-function rightOne() {
+function () {
 player.sx = 0
 player.sy = 0
 player.sWidth = 105
 player.sHeight = 276 
  }}
  if (player.frame === 2){ 
-function rightTwo() {
+function () {
   player.sx = 110
 player.sy = 0
   player.sWidth = 145
 player.sHeight =  276
  }}
   if (player.frame === 3){ 
-function rightThree() {
+function () {
   player.sx = 260
 player.sy = 0 
   player.sWidth = 162
 player.sHeight = 276 
  }}
    if (player.frame === 4){ 
-function rightFour() {
+function () {
 player.sx = 427
 player.sy = 0
    player.sWidth = 147
 player.sHeight = 276 
  }}
    if (player.frame === 5){  
-function rightFive() {
+    console.log("this part works...")
+function () {
 player.sx = 575
 player.sy = 0
   player.sWidth = 134
 player.sHeight = 276 
  }}
     if (player.frame === 10){ 
-function leftFive() {
+function () {
  player.sx = 0
 player.sy = 281
   player.sWidth = 140
 player.sHeight = 276
  }}
      if (player.frame === 9){ 
-function leftFour() {
+function () {
    player.sx = 145
 player.sy = 281
    player.sWidth = 145
 player.sHeight = 276 
  }}
       if (player.frame === 8){ 
-function leftThree() {
+function () {
   player.sx = 295
 player.sy = 281
   player.sWidth = 145
 player.sHeight = 276 
  }}
        if (player.frame === 7){ 
-function leftTwo() {
+function () {
   player.sx = 445
 player.sy = 281
   player.sWidth = 140
 player.sHeight = 276 
  }}
         if (player.frame === 6){ 
-function leftOne() {
+function () {
   player.sx = 590
 player.sy = 281
 player.sWidth = 119
