--- a/axeKnight.html
+++ b/axeKnight.html
@@ -180,7 +180,7 @@ controller = {
 player.face = 'right';
    player.frame = 5
    console.log(player.frame)
-   console.log(player.xs)
+   console.log(player.sx)
      
    }
  } 
