--- a/axeKnight.html
+++ b/axeKnight.html
@@ -178,10 +178,15 @@ controller = {
   } else {
   player.x_velocity += 1.2;
 player.face = 'right';
-   player.frame = 5
-   console.log(player.frame)
-   console.log(player.sx)
-     
+   player.frame = 1
+   setInerval(playerRightMovement(), 100)
+function playerRightMovement() {
+ console.log("player right movement works")
+ player.frame++
+ if (player.frame > 5){
+ player.frame = 2
+ }
+}
    }
  } 
  
@@ -343,8 +348,7 @@ player.sy = 0
 player.sHeight = 276 
  }
    if (player.frame === 5){  
-    console.log("this part works...")
-player.sx = 575
+player.sx = 565
 player.sy = 0
   player.sWidth = 134
 player.sHeight = 276 
