--- a/axeKnight.html
+++ b/axeKnight.html
@@ -21,12 +21,7 @@
  
  
 
-  function playerRightMovement() {
- player.frame = player.frame + 1
-   console.log(player.frame)
- if (player.frame > 5){
- player.frame = 5
- }
+  
  
  //AVATARS SET UP
  
@@ -188,6 +183,13 @@ player.face = 'right';
    setInterval(playerRightMovement(), 1000)
 }
    }
+  
+  function playerRightMovement() {
+ player.frame = player.frame + 1
+   console.log(player.frame)
+ if (player.frame > 5){
+ player.frame = 5
+ }}
  
  
  
@@ -407,4 +409,6 @@ player.sHeight = 276
   
   
   </script>
+  
+  </body>
   
