--- a/axeKnight.html
+++ b/axeKnight.html
@@ -179,6 +179,9 @@ controller = {
   player.x_velocity += 1.2;
 player.face = 'right';
    player.frame++
+   if (player.frame > 5){
+    player.frame = 2
+   }
 }
    }
   
