--- a/axeKnight.html
+++ b/axeKnight.html
@@ -189,6 +189,14 @@ player.face = 'right';
 }
    }
   
+  if (controller.right === flase && controller.left === flase) {
+   if (player.face === 'right'){
+    player.frame = 1
+   } if (player.face === 'left'){
+    player.frame = 6
+   }
+  }
+  
  
  
  
