--- a/axeKnight.html
+++ b/axeKnight.html
@@ -189,7 +189,7 @@ player.face = 'right';
 }
    }
   
-  if (controller.right === flase && controller.left === flase) {
+  if (controller.right === false && controller.left === false) {
    if (player.face === 'right'){
     player.frame = 1
    } if (player.face === 'left'){
