--- a/axeKnight.html
+++ b/axeKnight.html
@@ -168,10 +168,11 @@ controller = {
  } else {
    player.x_velocity -= 1.2; 
   player.face = 'left'
-  if (player.frame < 6) {
-   player.frame = 7
-  }
-  player.frame++
+  player.frame = 6
+  //if (player.frame < 6) {
+   //player.frame = 7
+  //}
+  //player.frame++
  }
  }
  
@@ -361,7 +362,7 @@ player.sy = 0
 player.sHeight = 276 
  }
    if (player.frame === 5){  
-player.sx = 560
+player.sx = 562
 player.sy = 0
   player.sWidth = 149
 player.sHeight = 276 
