--- a/axeKnight.html
+++ b/axeKnight.html
@@ -183,11 +183,10 @@ controller = {
   } else {
   player.x_velocity += 1.2;
 player.face = 'right';
-   player.frame = 5;
-   //if (player.frame > 5){
-    //player.frame = 2
-   //}
-   //player.frame++
+   if (player.frame > 5){
+    player.frame = 2
+   }
+   player.frame++
    
 }
    }
