--- a/axeKnight.html
+++ b/axeKnight.html
@@ -183,7 +183,7 @@ controller = {
   } else {
   player.x_velocity += 1.2;
 player.face = 'right';
-   if (player.frame > 5){
+   if (player.frame >= 5){
     player.frame = 2
    }
    player.frame++
