--- a/axeKnight.html
+++ b/axeKnight.html
@@ -168,7 +168,7 @@ controller = {
  } else {
    player.x_velocity -= 1.2; 
   player.face = 'left'
-  if (player.frame <= 6) {
+  if (player.frame <= 6 || player.frame >= 10) {
   player.frame = 7
   }
   player.frame++
