--- a/axeKnight.html
+++ b/axeKnight.html
@@ -374,15 +374,25 @@ player.sHeight = 276
    
  }
  
+ //PLAYER RUNNING ANIMATION
  
  function run() {
+  
+  
+  if (player.jump === true) {
+   if(player.face === 'right'){
+   player.frame = 3;
+   } if (player.face === 'left'){
+    player.frame = 8;
+   }
+  }
  
    if (controller.left) {
  if (player.x <= 20) {
  player.x_velocity = 0;
   player.face = 'left';
  } else {
-   player.x_velocity -= 3; 
+   player.x_velocity -= 3.4; 
   player.face = 'left'
   if (player.frame <= 6 || player.frame >= 10) {
   player.frame = 7
@@ -396,7 +406,7 @@ player.sHeight = 276
    player.x_velocity = 0;
    player.face = 'right';
   } else {
-  player.x_velocity += 3;
+  player.x_velocity += 3.4;
 player.face = 'right';
    if (player.frame >= 5){
     player.frame = 2
