--- a/axeKnight.html
+++ b/axeKnight.html
@@ -379,7 +379,7 @@ player.sHeight = 276
  function run() {
   
   
-  if (player.jump === true) {
+  if (player.jumping === true) {
    if(player.face === 'right'){
    player.frame = 3;
    } if (player.face === 'left'){
@@ -392,7 +392,7 @@ player.sHeight = 276
  player.x_velocity = 0;
   player.face = 'left';
  } else {
-   player.x_velocity -= 3.4; 
+   player.x_velocity -= 3.8; 
   player.face = 'left'
   if (player.frame <= 6 || player.frame >= 10) {
   player.frame = 7
@@ -406,7 +406,7 @@ player.sHeight = 276
    player.x_velocity = 0;
    player.face = 'right';
   } else {
-  player.x_velocity += 3.4;
+  player.x_velocity += 3.8;
 player.face = 'right';
    if (player.frame >= 5){
     player.frame = 2
