--- a/axeKnight.html
+++ b/axeKnight.html
@@ -294,7 +294,7 @@ enemy.x += enemy.x_velocity;
   
    
    if (player.health === 0) {
- 
+ alert("IAN SUCKS")
     setTimeout(function() {location.reload()}, 100)
  
    }
