--- a/axeKnight.html
+++ b/axeKnight.html
@@ -377,9 +377,12 @@ player.sHeight = 276
  enemy.draw();
  drawHealth();  
    
+  function playerInputFuction() {
+   var playerInput = prompt("Enter Text Here:")
+  }
   
   if (controller.Y === true && controller.T === true) {
-  var playerInput = prompt("ENTER TEXT HERE:")
+   playerInputFunction();
   }
   
  }
