--- a/axeKnight.html
+++ b/axeKnight.html
@@ -377,12 +377,10 @@ player.sHeight = 276
  enemy.draw();
  drawHealth();  
    
-  function playerInputFuction() {
-   var playerInput = prompt("Enter Text Here:")
-  }
   
   if (controller.Y === true && controller.T === true) {
-   playerInputFunction();
+   var playerInput = prompt("Enter Text Here:")
+   break;
   }
   
  }
