--- a/axeKnight.html
+++ b/axeKnight.html
@@ -379,9 +379,11 @@ player.sHeight = 276
    
   
   if (controller.Y === true && controller.T === true) {
+   controller.Y = false;
+   controller.T = false;
    var playerInput = prompt("Enter Text Here:")
-   break;
-  }
+  
+   }
   
  }
  
