--- a/rockpapersissors.html
+++ b/rockpapersissors.html
@@ -67,7 +67,7 @@ if (playerChoice === "ROCK" && computerChoice === "Rock") {
   confirm("The current score is " + computerScore + " (computer) vs " + playerScore + " (player) Get five points to win!")
 }
    if (playerScore === 5){
-   confirm("Congrats! You beat the computer! Try out the code 423098") 
+   confirm("Congrats! You beat the computer! Try pushing y and t at the same time in Axe Knight") 
    computerScore = 0;
    playerScore = 0;    
    }
