--- a/axeKnight.html
+++ b/axeKnight.html
@@ -381,9 +381,12 @@ player.sHeight = 276
   if (controller.Y === true && controller.T === true) {
    controller.Y = false;
    controller.T = false;
-   var playerInput = prompt("Enter Text Here:")
-  
+   var playerInput = prompt("Enter Text Here:")  
    }
+  
+  if (playerInput === "health"){
+   player.health += 100;
+  }
   
  }
  
