--- a/axeKnight.html
+++ b/axeKnight.html
@@ -387,6 +387,10 @@ player.sHeight = 276
   if (playerInput === "health"){
    player.health += 1000;
   }
+  if (playerInput === "huge"){
+   player.sWidth === 100
+   player.sHeight === 100
+  }
   
  }
  
