--- a/axeKnight.html
+++ b/axeKnight.html
@@ -27,8 +27,14 @@
  
  //AVATARS SET UP
  
+ //AXE
  
+ var axe = {
  
+  
+  
+  
+ }
 
 //ENEMY
  
@@ -60,7 +66,7 @@
  var player_height = 595;
  var player_width = 879;
  var player_image = new Image();
- player_image.src = 'knight (1).png';
+ player_image.src = 'axe_knight.png';
  
   var player = {
    colWidth: 105,
