--- a/axeKnight.html
+++ b/axeKnight.html
@@ -66,7 +66,7 @@
  var player_height = 595;
  var player_width = 879;
  var player_image = new Image();
- player_image.src = 'axe_knight.png';
+ player_image.src = 'axe_Knight.png';
  
   var player = {
    colWidth: 105,
