--- a/axeKnight.html
+++ b/axeKnight.html
@@ -429,10 +429,10 @@ player.sHeight = 276
  } else {
    player.x_velocity -= 5.4; 
   player.face = 'left'
-  //if (player.frame <= 6 || player.frame >= 10) {
+  if (player.frame <= 6 || player.frame >= 10) {
   player.frame = 6
- // }
-//  player.frame++
+  }
+ player.frame++
  }
  }
  
@@ -452,7 +452,7 @@ player.face = 'right';
    }}
   
  setInterval(animation, 30)
- setInterval(playerMovement, 150)
+ setInterval(playerMovement, 2000)
 
  
   window.addEventListener('keydown', controller.keyListener);
