--- a/axeKnight.html
+++ b/axeKnight.html
@@ -429,10 +429,10 @@ player.sHeight = 276
  } else {
    player.x_velocity -= 5.4; 
   player.face = 'left'
-  if (player.frame <= 6 || player.frame >= 10) {
-  player.frame = 7
-  }
- player.frame++
+ // if (player.frame <= 6 || player.frame >= 10) {
+  player.frame = 6
+  //}
+ //player.frame++
  }
  }
  
