--- a/axeKnight.html
+++ b/axeKnight.html
@@ -329,14 +329,14 @@ player.sy = 0
 player.sHeight = 276 
  }
   
-  if (player.frame === 10){ 
+  if (player.frame === 6){ 
   player.sx = 592
 player.sy = 281
 player.sWidth = 126
-player.sHeight = 276 
+player.sHeight = 280 
  }
   
-    if (player.frame === 9){ 
+    if (player.frame === 7){ 
  player.sx = 0
 player.sy = 284
   player.sWidth = 142
@@ -348,13 +348,13 @@ player.sy = 281
    player.sWidth = 152
 player.sHeight = 276 
  }
-      if (player.frame === 7){
+      if (player.frame === 9){
   player.sx = 294
 player.sy = 281
   player.sWidth = 156
 player.sHeight = 276 
  }
-       if (player.frame === 6){ 
+       if (player.frame === 10){ 
   player.sx = 447
 player.sy = 281
   player.sWidth = 147
@@ -429,10 +429,10 @@ player.sHeight = 276
  } else {
    player.x_velocity -= 5.4; 
   player.face = 'left'
- // if (player.frame <= 6 || player.frame >= 10) {
+ if (player.frame <= 6 || player.frame >= 10) {
   player.frame = 10
-  //}
- //player.frame++
+  }
+ player.frame++
  }
  }
  
