--- a/axeKnight.html
+++ b/axeKnight.html
@@ -69,7 +69,6 @@
  player_image.src = 'axe_Knight.png';
  
   var player = {
-   colWidth: 105,
    frame: 1,
    imunityLength: 100,
    imunity: false,
@@ -415,11 +414,24 @@ player.sHeight = 276
   
   
   if (player.jumping === true) {
-   if(player.face === 'right'){
-   player.frame = 4;
-   } if (player.face === 'left'){
-    player.frame = 9;
-   }
+    if (controller.right === false && controller.left === false)
+    {
+     if (player.face === 'right'){
+     player.frame = 11
+      player.frame = 1
+    } if player.face === 'left'){
+     player.frame = 13
+     player.frame = 6
+    }
+    }else{
+   if (player.face === 'right'){
+     player.frame = 12
+    player.frame = 4
+    } if player.face === 'left'){
+     player.frame = 14
+     player.frame = 9
+    }
+    }
   }
  
    if (controller.left) {
