--- a/axeKnight.html
+++ b/axeKnight.html
@@ -419,7 +419,7 @@ player.sHeight = 276
      if (player.face === 'right'){
      player.frame = 11
       player.frame = 1
-    } if player.face === 'left'){
+    } if (player.face === 'left'){
      player.frame = 13
      player.frame = 6
     }
