--- a/axeKnight.html
+++ b/axeKnight.html
@@ -427,7 +427,7 @@ player.sHeight = 276
    if (player.face === 'right'){
      player.frame = 12
     player.frame = 4
-    } if player.face === 'left'){
+    } if (player.face === 'left'){
      player.frame = 14
      player.frame = 9
     }
